@@ -538,9 +538,10 @@ namespace libtorrent
 		}
 		else if (m_ses.settings().seed_choking_algorithm == session_settings::anti_leech)
 		{
-			// the anti-leech seeding algorithm ranks peers based on how many pieces
-			// they have, prefering to unchoke peers that just started and peers that
-			// are close to completing. Like this:
+			// the anti-leech seeding algorithm is based on the paper "Improving
+			// BitTorrent: A Simple Approach" from Chow et. al. and ranks peers based
+			// on how many pieces they have, prefering to unchoke peers that just
+			// started and peers that are close to completing. Like this:
 			//   ^
 			//   | \                       / |
 			//   |  \                     /  |
@@ -749,8 +750,13 @@ namespace libtorrent
 				TORRENT_ASSERT(std::find(m_accept_fast.begin()
 					, m_accept_fast.end(), i)
 					== m_accept_fast.end());
-				if (m_accept_fast.empty()) m_accept_fast.reserve(10);
+				if (m_accept_fast.empty())
+				{
+					m_accept_fast.reserve(10);
+					m_allowed_fast_piece_cnt.reserve(10);
+				}
 				m_accept_fast.push_back(i);
+				m_allowed_fast_piece_cnt.push_back(0);
 			}
 			return;
 		}
@@ -787,6 +793,7 @@ namespace libtorrent
 					write_allow_fast(piece);
 					if (m_accept_fast.empty()) m_accept_fast.reserve(10);
 					m_accept_fast.push_back(piece);
+					m_allowed_fast_piece_cnt.push_back(0);
 					if (int(m_accept_fast.size()) >= num_allowed_pieces
 						|| int(m_accept_fast.size()) == num_pieces) return;
 				}
@@ -2130,6 +2137,11 @@ namespace libtorrent
 			return;
 		}
 
+		int fast_idx = -1;
+		std::vector<int>::iterator fast_iter = std::find(m_accept_fast.begin()
+			, m_accept_fast.end(), r.piece);
+		if (fast_iter != m_accept_fast.end()) fast_idx = fast_iter - m_accept_fast.begin();
+
 		// make sure this request
 		// is legal and that the peer
 		// is not choked
@@ -2145,8 +2157,18 @@ namespace libtorrent
 		{
 			// if we have choked the client
 			// ignore the request
-			if (m_choked && std::find(m_accept_fast.begin(), m_accept_fast.end()
-				, r.piece) == m_accept_fast.end())
+			const int blocks_per_piece = static_cast<int>(
+				(t->torrent_file().piece_length() + t->block_size() - 1) / t->block_size());
+
+			// disconnect peers that downloads more than foo times an allowed
+			// fast piece
+			if (m_choked && fast_idx != -1 && m_allowed_fast_piece_cnt[fast_idx] >= 3 * blocks_per_piece)
+			{
+				disconnect(errors::too_many_requests_when_choked);
+				return;
+			}
+
+			if (m_choked && fast_idx == -1)
 			{
 #if defined TORRENT_VERBOSE_LOGGING || defined TORRENT_ERROR_LOGGING
 				peer_log("*** REJECTING REQUEST [ peer choked and piece not in allowed fast set ]");
@@ -2176,6 +2198,10 @@ namespace libtorrent
 			}
 			else
 			{
+				// increase the allowed fast set counter
+				if (fast_idx != -1)
+					++m_allowed_fast_piece_cnt[r.piece];
+
 				m_choke_rejects = 0;
 				m_requests.push_back(r);
 #ifdef TORRENT_REQUEST_LOGGING
@@ -6083,4 +6109,3 @@ namespace libtorrent
 	}
 
 }
-
